--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       <img src="https://i.imgur.com/zqpwkLQ.png" />
     </div>
     <div class="l-part">
-      <input type="text" placeholder="Username" class="input-1" />
+      <input type="text" placeholder="Username" class="todo-input" />
       <div class="overlap-text">
-        <input type="password" placeholder="Password" class="input-2" />
+        <input type="password" placeholder="Password" class="todo-input" />
         <a href="#">Forgot?</a>
       </div>
-      <input type="button" value="Log in" class="btn" />
+      <input type="submit" value="Log in" class="todo-button" />
     </div>
   </div>
   <div class="sub-content">
@@ -34,8 +34,17 @@
       Don't have an account?<a href="#">Sign up</a>
     </div>
   </div>
-</div>
 
+    <div class="todo-container">
+      <ul class="todo-list"></ul>
+    </div>
+   
+    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+    <script src="assets/js/inventory.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  
 
 
 
