--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <img src="https://i.imgur.com/zqpwkLQ.png" />
     </div>
     <div class="l-part">
-      <input type="text" placeholder="Username" class="todo-input" />
+      <input type="text" placeholder="Username" class="input-1" />
       <div class="overlap-text">
         <input type="password" placeholder="Password" class="todo-input" />
         <a href="#">Forgot?</a>
